--- a/Page.css
+++ b/Page.css
@@ -19,8 +19,8 @@ iframe{
 .gallery img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* zachová poměr stran */
-  border-radius: var(--space-2);
+  object-fit: cover; 
+  border-radius: var(--border-radius-1);
 }
 
 .gallery img:hover{
