--- a/layout.css
+++ b/layout.css
@@ -1,7 +1,7 @@
 /*Hero sekce----------------------------------------------------------------------------*/
 .hero-image{
   background-image: url("Naboje.jpg");;
-  height: 75%;
+  height: var(--width-75);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,7 +13,7 @@
 .hero-text{
   position: relative;
   color: var(--sl-color-neutral-2);
-  max-width: 100%;
+  max-width: var(--width-100);
   padding: var(--space-4);
 }
 
@@ -31,7 +31,7 @@
     padding: var(--space-2) var(--space-2);
   }
   .image-section img{
-  max-width: calc(6*var(--space-6));
+  max-width: calc(6*var(--width-1));
   height: auto;
 }
 }
@@ -40,7 +40,7 @@ footer{
     position: relative;
     padding: var(--space-3);
     bottom: var(--space-0);
-    width:calc(100%-(2*var(--space-3)));
+    width:calc(var(--width-100) -(2*var(--space-3)));
     background-color: var(--sl-color-primary-1);
     text-align: center;
 }
