--- a/theme.css
+++ b/theme.css
@@ -29,6 +29,15 @@
     --space-5: 2rem;
     --space-6: 3rem;
 
+    --margin-0: 0;
+    --margin-1: 0.25rem;
+    --margin-2: 0.5rem;
+
+    --width-1: 3rem;
+    --width-2: 1.5rem;
+    --width-75: 75%;
+    --width-100: 100%;
+
     --border-1: 2px;
-    --border-radius-1: 12px; 
+    --border-radius-1: 6px; 
   }
