--- a/utilities.css
+++ b/utilities.css
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: center;
   gap: calc(4*var(--space-6));
-  padding: var(--space-5);
+  padding: var(--space-5) var(--space-0);
   
 }
 
