--- a/Page.css
+++ b/Page.css
@@ -13,7 +13,7 @@ iframe{
   display: grid;
   gap: var(--space-2);
   grid-template-columns: repeat(auto-fit, minmax(15.5rem, 1fr));
-  padding: 20px;
+  padding: var(--space-3);
 }
 
 .gallery img {
@@ -26,3 +26,4 @@ iframe{
 .gallery img:hover{
      transform: scale(1.03);
 }
+
