--- a/layout.css
+++ b/layout.css
@@ -43,4 +43,5 @@ footer{
     width:calc(var(--width-100) -(2*var(--space-3)));
     background-color: var(--sl-color-primary-1);
     text-align: center;
+    color: var(--sl-text-color-1);
 }
