--- a/components.css
+++ b/components.css
@@ -44,6 +44,10 @@
   margin-right: var(--margin-2);
 
 }
+
+.kontakty{
+  float: right;
+}
 /*navigace------------------------------------------------------------------------------*/
 
 /*Tlačítko----------------------------------------------------------*/
