--- a/layout.css
+++ b/layout.css
@@ -42,7 +42,7 @@ footer{
     position: relative;
     padding: var(--space-3);
     bottom: var(--space-0);
-    width:calc(var(--width-100) -(2*var(--space-3)));
+    width:calc(var(--width-100) - var(--width-3));
     background-color: var(--sl-color-primary-1);
     text-align: center;
     color: var(--sl-text-color-1);
