--- a/theme.css
+++ b/theme.css
@@ -1,48 +1,119 @@
-:root{
-    --font-size-3xl: 2.986rem;
-    --font-size-2xl: 2.488rem;
-    --font-size-xl: 2.074rem;
-    --font-size-l: 1.728rem;
-    --font-size-m: 1.44rem;
-    --font-size-s: 1.2rem;
-    --font-size-xs: 1rem;
-    --font-size-2xs: 0.833rem;
-    --font-size-3xs: 0.694rem;
+ .menu {
+    background-color: var(--sl-color-primary-1);
+    color: var(--sl-text-color-1);
+    display: flex;
+    align-items: center;
+    position: relative; 
+    padding: 2rem;
+
+  }
+
+
+  /* Hamburger */
+  .hamburger {
+    width: var(--space-5);
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-1);
+    
+  }
+
+  .hamburger span {
+    height: 3px;
+    background: var(--sl-color-neutral-1);
+    width: 100%;
+    transition: .3s;
+    
+  }
+
+  /* Menu */
+  .menu__list {
+    list-style: none;
+    display: flex;
+  }
+
+  .menu__link {
+    color: var(--sl-color-neutral-1);
+    text-decoration: none;
+    display: block;
+  }
+
+  .menu__logo{
+  
+  height: 1.5rem;
+  width: 1.5rem;
+  margin-right: 2rem;
+
+}
+.menu__link:hover {
+  background-color: var(--sl-color-primary-3);
+  color: var(--sl-color-neutral-1);
+}
+
+.menu__link.active {
+  background-color: var(--sl-color-primary-2) !important;  
+  color: var(--sl-text-color-2) 
+}
+
+  /* Mobilní verze: menu přes celou šířku */
+  @media (max-width: 700px) {
+    .menu__list {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      flex-direction: column;
+      background: var(--sl-color-primary-1);
+      display: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .menu__list.open {
+      display: block;
+    }
+
+    .menu__item {
+      width: 100%;
+    }
+
+    .menu__link {
+      padding: 0;
+      width: 100%;
+      text-align: center;
+      padding: 2rem;
+      display: inline-flex;
+      align-items: center;
+    }
+  }
+
+  /* Desktop verze: hamburger skryt, menu vedle sebe */
+  @media (min-width: 768px) {
+    .hamburger {
+      display: none;
+    }
+    .menu{
+      padding: 0;
+    }
     
 
-    --sl-color-primary-1: #B1B1C8;
-    --sl-color-primary-2: #0555AC;
-    --sl-color-primary-3: #7A8EB9;
-    --sl-color-primary-4: #7F81A6;
     
-    --sl-color-secondary-1:#C5A200;
+    .menu__list {
+      list-style-type: none;
+      list-style: none;
+      justify-content: center;
+      margin: var(--space-0);
+      display: flex;
+      padding: 0;
+    }
 
-    --sl-color-neutral-1: #000 ;
-    --sl-color-neutral-2: #FFFF;
-
-    --sl-text-color-1: #112A46;
-    --sl-text-color-2: #FFFF;
-    --sl-text-color-3: #112A46;
-    --sl-text-color-4: #112A46;
-
-    --space-0: 0;
-    --space-1: 0.25rem;
-    --space-2: 0.5rem;
-    --space-3: 1rem;
-    --space-4: 1.5rem;
-    --space-5: 2rem;
-    --space-6: 3rem;
-
-    --margin-0: 0;
-    --margin-1: 0.25rem;
-    --margin-2: 0.5rem;
-
-    --width-1: 3rem;
-    --width-2: 1.5rem;
-    --width-3: 2rem;
-    --width-75: 75%;
-    --width-100: 100%;
-
-    --border-1: 2px;
-    --border-radius-1: 6px; 
+    .menu__link {
+      display: inline-flex;
+      align-items: center;  
+      text-decoration: none;
+      color: var(--sl-color-neutral-1); 
+      padding: 2rem;
+      text-align: center;
+    }
   }
