--- a/components.css
+++ b/components.css
@@ -1,51 +1,164 @@
 /*navigace------------------------------------------------------------------------------*/
-.menu ul{
-    list-style-type: none;
-    list-style: none;
-    overflow: hidden;
-    justify-content: center;
+ .menu {
     background-color: var(--sl-color-primary-1);
     color: var(--sl-text-color-1);
-    padding: var(--space-0);
-    margin: var(--margin-0);
+    padding: var(--space-5);
+  }
+
+
+  /* Hamburger */
+  .hamburger {
+    width: var(--space-5);
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-1);
     
+  }
 
-}
+  .hamburger span {
+    height: 3px;
+    background: var(--sl-color-neutral-2);
+    width: 100% ;
+    transition: .3s;
+    
+  }
 
-.menu ul li{
-    float: left;
-}
+  /* Menu */
+  .menu__list {
+    list-style: none;
+    display: flex;
+  }
 
-.menu ul li a{
-    padding: var(--space-3) var(--space-3);
-    display: inline-flex;
-    text-align: center;
-    align-items: center;  
+  .menu__link {
+    color: var(--sl-color-neutral-1);
     text-decoration: none;
-    color: var(--sl-color-neutral-1);
-    
-}
+    display: block;
+  }
 
-.menu ul li a:hover{
-    background-color: var(--sl-color-primary-3);
-    color: var(--sl-color-neutral-1);
-
-}
-
-.menu ul li a.active{
-    background-color: var(--sl-color-primary-2);  
-    color: var(--sl-text-color-2) 
-}
-
-.menu img{
+  .menu__logo{
   
   height: 1.5rem;
   width: 1.5rem;
-  margin-right: var(--margin-2);
+  margin-right: 2rem;
 
 }
+.menu__link:hover {
+  background-color: var(--sl-color-primary-3);
+  color: var(--sl-color-neutral-1);
+  box-sizing: border-box;
+}
 
+.menu__link.active {
+  background-color: var(--sl-color-primary-2) !important;  
+  color: var(--sl-text-color-2) ;
+  box-sizing: border-box;
+  
+}
+
+  /* Mobilní verze: menu přes celou šířku */
+  @media (max-width: 1024px) {
+    .menu__list {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      flex-direction: column;
+      background: var(--sl-color-primary-1);
+      display: none;
+      margin: 0;
+      padding: 0;
+      border-style: solid;
+      width: 100% ;  
+      box-sizing: border-box;
+      overflow-x: hidden;
+    }
+
+    .menu{
+      padding: 0;
+      background-color: var(--sl-color-primary-2);
+      padding: 2rem;
+    }
+
+    .menu__list.open {
+      display: block;
+      z-index: 10; 
+    }
+
+    .menu__item {
+      width: 100%;
+    }
+
+    .menu__link {
+      padding: 0;
+      width: 100%;
+      text-align: center;
+      padding: 2rem;
+      display: inline-flex;
+      align-items: center;
+      
+    }
+  }
+
+  /* Desktop verze: hamburger skryt, menu vedle sebe */
+  @media (min-width: 768px) {
+    .hamburger {
+      display: none;
+      
+      
+    }
+    .menu{
+      padding: 0;
+      z-index: 10;
+    }
+    
+
+    
+    .menu__list {
+      list-style-type: none;
+      list-style: none;
+      justify-content: center;
+      margin: var(--space-0);
+      display: flex;
+      padding: 0;
+      
+      
+    }
+
+    .menu__link {
+      display: inline-flex;
+      align-items: center;  
+      text-decoration: none;
+      color: var(--sl-color-neutral-1); 
+      padding: 2rem;
+      text-align: center;
+      
+      
+      
+      
+      
+    }
+  }
 /*navigace------------------------------------------------------------------------------*/
+
+/*Hero sekce----------------------------------------------------------------------------*/
+.hero-image{
+  background-image: url("Naboje.jpg");;
+  height: var(--width-75);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  z-index: 1;
+  
+}
+
+.hero-text{
+  color: var(--sl-color-neutral-2);
+  max-width: var(--width-100);
+}
+/*Hero sekce----------------------------------------------------------------------------*/
 
 /*Tlačítko----------------------------------------------------------*/
 
@@ -54,7 +167,6 @@
   color: var(--sl-text-color-2);
   background-color: var(--sl-color-primary-2);
   padding: var(--space-3) var(--space-4);
-  text-align: center;
   text-decoration: none;
   font-size: var(--font-size-xs);
   border-radius: var(--border-radius-1);
@@ -76,14 +188,67 @@
   flex: 1;                        
   background-color: var(--sl-color-primary-1); 
   color: var(--sl-text-color-1);     
-  padding: var(--space-2);
-  text-align: center; 
 }
 
-.box ul{
+.box__list{
     text-align: left;
 }
 
-.box a{
-  color: black;
+.image-section{
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: calc(2*var(--space-6)); 
+}
+
+.image-section__img{
+  max-width: calc(8*var(--width-1));
+  height: auto;
+}
+
+@media (min-width: 768px) {
+  .image-section{
+    flex-direction: row;
+    gap: calc(2*var(--space-6));
+  }
+  .image-section__img{
+    max-width: calc(6*var(--width-1));
+}
+}
+@media(min-width: 1024px) {
+  .image-section{
+    flex-direction: row;
+    gap: calc(6*var(--space-4));
+  }
+  .image-section__img{
+    max-width: calc(8*var(--width-1));
+  }
+}
+
+.container__item{
+  list-style: none;
+}
+
+iframe{
+ width:calc(100% - (var(--space-2)*2));
+ height:calc(var(--space-6)*7);
+ border: var(--space-0); 
+}
+
+.gallery {
+  display: grid;
+  gap: var(--space-2);
+  grid-template-columns: repeat(auto-fit, minmax(15.5rem, 1fr));
+  padding: var(--space-3);
+}
+
+.gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  border-radius: var(--border-radius-1);
+}
+
+.gallery img:hover{
+     transform: scale(1.03);
 }
