--- a/utilities.css
+++ b/utilities.css
@@ -1,43 +1,34 @@
-.container {
+.flex{
   display: flex;
-  justify-content: space-between;
-  gap: var(--space-2);
+}
+
+.p-0{
+  padding: var(--space-0);
+}
+.p-1{
+  padding: var(--space-1);
+}
+
+.p-2{
   padding: var(--space-2);
 }
 
-.container li{
-  list-style: none;
+.p-3{
+  padding: var(--space-3);
 }
 
-.image-section{
-  display: flex;
+.p-4{
+  padding: var(--space-4);
+}
+
+.p-5{
+  padding: var(--space-5);
+}
+
+.relative{
   position: relative;
-  justify-content: center;
-  align-items: center;
-  gap: calc(4*var(--space-6));
-  padding: var(--space-5) var(--space-0);
-  
 }
 
-.image-section img{
-  max-width: calc(10*var(--width-1));
-  height: auto;
+.text-center{
+  text-align: center;
 }
-
-h1{
-    font-size: var(--font-size-3xl);
-}
-
-h2{
-  font-size: var(--font-size-2xl);
-}
-  
-h3{
-  font-size: var(--font-size-l);
-}
-p{
-  font-size: var(--font-size-s);
-}
-
-
-
