--- a/base.css
+++ b/base.css
@@ -1,5 +1,5 @@
 body{
-  background: linear-gradient(to bottom , var(--sl-color-primary-4), var(--sl-color-neutral-2));  
+  background: linear-gradient(to bottom , var(--color-primary-4), var(--color-neutral-2));  
   padding: var(--space-0);
   margin: var(--space-0);
 }
@@ -7,8 +7,9 @@ body{
 html{
     
     font-family: Arial, Helvetica, sans-serif;
-    color: var(--sl-color-neutral-2);
+    color: var(--color-neutral-2);
     font-size: 16px;
+    
 }
 
 :root{
@@ -23,20 +24,20 @@ html{
     --font-size-3xs: 0.694rem;
     
 
-    --sl-color-primary-1: #B1B1C8;
-    --sl-color-primary-2: #0555AC;
-    --sl-color-primary-3: #7A8EB9;
-    --sl-color-primary-4: #7F81A6;
+    --color-primary-1: #B1B1C8;
+    --color-primary-2: #0555AC;
+    --color-primary-3: #7A8EB9;
+    --color-primary-4: #7F81A6;
     
-    --sl-color-secondary-1:#C5A200;
+    --color-secondary-1:#C5A200;
 
-    --sl-color-neutral-1: #000 ;
-    --sl-color-neutral-2: #FFFF;
+    --color-neutral-1: #000 ;
+    --color-neutral-2: #FFFF;
 
-    --sl-text-color-1: #112A46;
-    --sl-text-color-2: #FFFF;
-    --sl-text-color-3: #112A46;
-    --sl-text-color-4: #112A46;
+    --text-color-1: #112A46;
+    --text-color-2: #FFFF;
+    --text-color-3: #112A46;
+    --text-color-4: #112A46;
 
     --space-0: 0;
     --space-1: 0.25rem;
